Bug 1391857 - Fix ctx flags for e10s stun addr gathering. r=drno, a=lizzard

In the case of e10s, the ctx flags for default route only (and less
importantly in this case, proxy only) were not set on the ice ctx
when SetStunAddrs was called in PeerConnectionMedia.

MozReview-Commit-ID: CldUpJfaaH3

--HG--
extra : source : ef2f00ebda5cd733d76d5801632ca1ebc617597c
extra : histedit_source : cecb067c5ac9e67f342c0435d0b00ece4adf5bd6